# qwc

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  sweep.sh  thing.txt  wcl-scalar  wcl.cpp
.github/workflows/: analysis.yml  benchmark.yml  release.yml
benchmarks/: README.md  bench-spec.yml  bench.py  gen-data.py  gen-test-data.py  sweep.py
build-wsl/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja  compile_commands.json
build-wsl/Testing/Temporary/: CTestCostData.txt
build-wsl/tests/: CTestTestfile.cmake
cmake/: GenerateVersionHeader.cmake
conformance/: README.md  conftest.py  corpus.py  requirements.txt  run.py  session.py  test_conformance.py  wc_harness.py
conformance/ci/: github-actions.yml  gitlab-ci.yml
docs/superpowers/specs/: 2026-06-10-hyperfine-benchmark-suite-design.md
include/: avx2_util.h  chars.h  cli.h  countlines.h  iswprint_table.h  maxlinelen.h  processfile.h  result.h  typedef.h  words.h  words_kernel.h
scripts/: check-format.sh  gen-iswprint-table.c  gen-tables.sh  probe-wc-words.py
src/: chars_avx2.cpp  chars_neon.cpp  chars_scalar.cpp  cli.cpp  count_avx2.cpp  count_neon.cpp  count_scalar.cpp  countlines.cpp  countlines_avx2.cpp  countlines_neon.cpp  countlines_scalar.cpp  main.cpp  maxlinelen_avx2.cpp  maxlinelen_neon.cpp  maxlinelen_scalar.cpp  processfile.cpp  words_avx2.cpp  words_neon.cpp  words_scalar.cpp
tests/: CMakeLists.txt  chars_test.cpp  cli_test.cpp  count_test.cpp  maxlinelen_test.cpp  processfile_test.cpp  test_util.h  words_test.cpp
